[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/images/SB_sprites.png" type="Texture" id=1]
[ext_resource path="res://scripts/player1.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/gun.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/powerUp.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/images/forcefield.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64.3328, 230.458 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 39.1382, 121.851 )

[node name="player1" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
vframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -11.2246, 6.73477 )
shape = SubResource( 1 )

[node name="idle" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )

[node name="walk" type="AnimationPlayer" parent="."]
anims/walk = SubResource( 3 )

[node name="attack" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 4 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( -9.4276, -254.994 )

[node name="Delay" type="Timer" parent="."]
wait_time = 0.12

[node name="gun" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="isuck" type="Timer" parent="."]

[node name="p1hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="p1hitbox"]
position = Vector2( -8.49481, 73.6222 )
shape = SubResource( 5 )

[node name="invinc" type="Timer" parent="."]
wait_time = 6.0

[node name="invinc2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="forcefield" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="stupidanimting" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1

[connection signal="animation_finished" from="walk" to="." method="_on_walk_animation_finished"]
[connection signal="timeout" from="Delay" to="." method="_on_Delay_timeout"]
[connection signal="timeout" from="isuck" to="." method="_on_isuck_timeout"]
[connection signal="area_entered" from="p1hitbox" to="." method="_on_p1hitbox_area_entered"]
[connection signal="timeout" from="invinc" to="." method="_on_invinc_timeout"]
[connection signal="timeout" from="stupidanimting" to="." method="_on_stupidanimting_timeout"]
